--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,13 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
 
-<%= yield %>
+	<%= link_to "Home", root_path %>
+	<%= link_to "About", about_path %>
+	<%= yield %>
 
 </body>
+
 </html>
