Added Bootstrap as well as basic page layout for later

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Temp homepage for Pinterest Clone</p>
+<h1>Welcome</h1>
+<br>
+<h4>Pinterest Clone - Work in Progress</h4>
+<br>
+Click here to <a href="/login"><button type="button" class="btn btn-info">Login</button></a>
