--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,18 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 
 <body>
 
-	<%= link_to "Home", root_path %>
-	<%= link_to "About", about_path %>
-	<%= yield %>
+	<%= render 'layouts/header.html.erb' %>
+
+	<div class="container">
+		<div class="jumbotron">
+			<%= yield %>
+		</div>
+	</div>
 
 </body>
 
