Greatly improved the UI from the previous basic layout

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,18 @@
  *= require_tree .
  *= require_self
  */
+$emerald: #2ecc71;
+$concrete: #95a5a6;
 
+body {
+	background: $emerald;
+}
+
+.navbar-default {
+	background-color: $concrete;
+	border-style: none;
+}
+
+.navbar-brand {
+	color: $emerald;
+}
