--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,4 @@
 <br>
 <h4>Pinterest Clone - Work in Progress</h4>
 <br>
-Click here to <a href="/login"><button type="button" class="btn btn-info">Login</button></a>
+Click here to <a href="/login"><button type="button" class="btn btn-info login">Login</button></a>
