--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<h1>Welcome</h1>
+<h1>Welcome to my app!</h1>
 <br>
 <h4>Pinterest Clone - Work in Progress</h4>
 <br>
-Click here to <a href="/login"><button type="button" class="btn btn-info login">Login</button></a>
+<%= link_to "Login", login_path, class: "btn btn-info login" %> <%= link_to "Sign Up", register_path, class: "btn btn-info register" %>
