--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
-<h1>Welcome! Just started work on this so it's lacking functionality at the time.</h1>
+<h1>Welcome!</h1>
 <br>
 <h4>Pinterest Clone - Work in Progress</h4>
+<h4>Just started work on this so it's lacking functionality at the time.</h4>
 <br>
 <%= link_to "Login", login_path, class: "btn btn-info login" %> <%= link_to "Sign Up", register_path, class: "btn btn-info register" %>
