Added Devise gem to Ruby for User registration and login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,15 @@
 	<%= render 'layouts/header.html.erb' %>
 
 	<div class="container">
+
+		<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+		<% end %>
+
 		<div class="jumbotron">
 			<%= yield %>
 		</div>
+		
 	</div>
 
 </body>
