Added Devise for working Signup/Login

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,4 +3,8 @@
 <h4>Pinterest Clone - Work in Progress</h4>
 <h4>Just started work on this so it's lacking functionality at the time.</h4>
 <br>
-<%= link_to "Login", login_path, class: "btn btn-info login" %> <%= link_to "Sign Up", register_path, class: "btn btn-info register" %>
+<% if user_signed_in? %>
+	<%= link_to "Log Out", destroy_user_session_path, class: "btn btn-info login", method: :delete %>
+<% else %>
+	<%= link_to "Login", new_user_session_path, class: "btn btn-info login" %> <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-info register" %>
+<% end %>
