--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,10 +16,13 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
+
         <% if user_signed_in? %>
          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
         <% else %>
+          <li><%= link_to "Log In", new_user_session_path %></li> <li><%= link_to "Register", new_user_registration_path %></li>
         <% end %> 
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
