--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,23 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h2 class="panel-title">Reset Password</h2>
   </div>
+  <div class="panel-body">
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+	  <%= devise_error_messages! %>
 
-<%= render "devise/shared/links" %>
+	  <div class="field form-group">
+	    <%= f.label :email %><br />
+	    <%= f.email_field :email, autofocus: true, class: "form-control" %>
+	  </div>
+
+	  <div class="actions form-group">
+	    <%= f.submit "Send instructions", class: "btn login", style: "background-color: #D9EDF7; opacity: 1"  %>
+	  </div>
+   	<% end %>
+   </div>	
+	<div class="panel-footer">
+		<%= render "devise/shared/links" %>
+	</div>
+</div>	
