--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,29 +1,38 @@
 <div class="panel panel-info">
+
   <div class="panel-heading">
     <h2 class="panel-title">Change Password</h2>
   </div>
+
   <div class="panel-body">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
+      <%= f.hidden_field :reset_password_token %>
 
-  <div class="field form-group">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <div class="field form-group">
+        <%= f.label :password, "New password" %><br />
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+        <% end %>
+        <%= f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control"  %>
+      </div>
+
+      <div class="field form-group">
+        <%= f.label :password_confirmation, "Confirm new password" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control"  %>
+      </div>
+
+      <div class="actions form-group">
+        <%= f.submit "Change my password", class: "btn login", style: "background-color: #D9EDF7; opacity: 1" %>
+      </div>
+
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control"  %>
   </div>
 
-  <div class="field form-group">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control"  %>
+  <div class="panel-footer">
+    <%= render "devise/shared/links" %>
   </div>
+  
+</div>
 
-  <div class="actions form-group">
-    <%= f.submit "Change my password", class: "btn login", style: "background-color: #D9EDF7; opacity: 1"   %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
