--- a/app/assets/stylesheets/pages.css.css
+++ b/app/assets/stylesheets/pages.css.css
@@ -35,4 +35,7 @@ body {
   opacity: 0.5;
   background-color: #9b59b6; }
 
+.posts-table tr > td {
+  padding-right: 1em; }
+
 /*# sourceMappingURL=pages.css.css.map */
