--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -38,3 +38,7 @@ body {
 	opacity: 0.80;
 	border-style: none;
 } .register:hover {opacity: 0.5; background-color: #9b59b6;}
+
+.posts-table tr > td {
+	padding-right: 1em;
+}
