--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,13 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @post.description %>
-</p>
+<div class="row">
+	<div class="span6 offset3">
+		<div class="well">
+			<p>
+			  <strong>Description:</strong>
+			  <%= @post.description %>
+			</p>
+		</div>
+	</div>
+</div>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
