--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
-<h1>Listing posts</h1>
+<h1>All Posts</h1>
+<br><br>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Description</th>
@@ -22,4 +23,6 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<center class="new-post">
+  <%= link_to 'New Post', new_post_path %>
+</center>
