It doesn't look awful anymore and resources are unique to User IDs now

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -35,13 +35,12 @@ body {
 
 
 .login2 {
-	background-color: #3498db;
-	opacity: 0.80;
+	background-color: #2ecc71;
 	border-style: none;
 	padding: 1.25em;
 	font-size: 1.25em;
 	margin: 0 .4em;
-} .login2:hover {opacity: 0.5;}
+} .login2:hover {background-color: #2ecc71; opacity: 0.825;}
 
 .register {
 	background-color: #9b59b6;
