--- a/app/assets/stylesheets/pages.css.css
+++ b/app/assets/stylesheets/pages.css.css
@@ -27,15 +27,15 @@ body {
   opacity: 0.5; }
 
 .login2 {
-  background-color: #3498db;
-  opacity: 0.80;
+  background-color: #2ecc71;
   border-style: none;
   padding: 1.25em;
   font-size: 1.25em;
   margin: 0 .4em; }
 
 .login2:hover {
-  opacity: 0.5; }
+  background-color: #2ecc71;
+  opacity: 0.825; }
 
 .register {
   background-color: #9b59b6;
