--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,15 +14,18 @@
       <tr>
         <td><%= post.description %></td>
         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% if current_user == post.user %> <!-- CONDITIONAL FOR IF LOGGED IN USER = USER WHO POSTED THE CONTENT -->
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
+          <td><%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
-  </tbody>
-</table>
+  </tbody> <!--/.posts-table -->
+</table> <!--/.table .table-striped-->
 
 <br>
 
 <center class="new-post">
   <%= link_to 'New Post', new_post_path %>
-</center>
+</center> <!--/.new-post-->
