Added PaperClip Gem for File Uploading

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,9 +12,11 @@
   <% end %>
 
   <div class="field form-group">
+    <%= f.file_field :image %> <br>
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
+
   <div class="actions form-group">
     <%= f.submit :Submit, class: "btn btn-primary" %>
   </div>
