--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="span6 offset3">
 		<div class="well">
+			<%= image_tag @post.image %>
 			<p>
 			  <strong>Description:</strong>
 			  <%= @post.description %>
