Fixed sizes of uploaded images

--- a/app/assets/stylesheets/pages.css.css
+++ b/app/assets/stylesheets/pages.css.css
@@ -54,4 +54,7 @@ body {
   font-weight: bold;
   color: #16a085; }
 
+.well > img {
+  max-width: 100%; }
+
 /*# sourceMappingURL=pages.css.css.map */
