--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th>Image</th>
       <th>Description</th>
       <th colspan="3"></th>
     </tr>
@@ -12,6 +13,7 @@
   <tbody class="posts-table">
     <% @posts.each do |post| %>
       <tr>
+        <td><%= image_tag post.image %></td>
         <td><%= post.description %></td>
         <td><%= link_to 'Show', post %></td>
 
