--- a/app/assets/stylesheets/pages.css.css
+++ b/app/assets/stylesheets/pages.css.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif; }
 
 .navbar-default {
-  background-color: #2ecc71;
+  background-color: #b1b3bc;
   border-style: none; }
 
 .navbar-brand, nav a {
