--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 $mainbg: #ecf0f1;
-$navbg: #b1b3bc;
+$navbg: #2ecc71;
 $buttonbg: #e74c3c;
 
 body {
