--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <center class="new-post">
-  <%= link_to 'New Post', new_post_path %>
+  <%= link_to 'Upload New Image', new_post_path %>
 </center> <!--.new-post-->
 
 <br><br><br><br>
