--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
 	<h1>Welcome!</h1>
 	<br>
-	<h4>Pinterest Clone - Work in Progress</h4>
+	<h4>Work in Progress</h4>
 	<br>
 	<%= link_to "Browse & Create Posts", posts_path, class: "btn btn-info login2" %>
 </div>
