Updated main view

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-	<h1>Welcome!</h1>
+	<h1>Welcome! Please register to upload images.</h1>
 	<br>
 	<h4>Work in Progress</h4>
 	<br>
