Updated about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>This is the about page for the Pinterest clone</h1>
-<p>Under Construction</p>
+<h1>This is the about page</h1>
+<p>under construction friend!</p>
