--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
 	<h1>Welcome!</h1>
 	<br>
-	<h2>Please register to upload images.</h2>
+	<h2>Please register to upload your own images.</h2>
 	<br>
 	<h4>Work in Progress</h4>
 	<br>
