--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+</head>
+
 <center class="new-post">
   <%= link_to 'Upload New Image', new_post_path %>
 </center> <!--.new-post-->
